# POS_semestral_project

./: CMakeLists.txt  README.md  client.c  client.h  cloveceLogic.c  cloveceLogic.h  main.c  server.c  server.h  shared.c  shared.h
